# apriltagn_ros

./: CMakeLists.txt  package.xml
calib/cv_camera/: ost.txt  ost.yaml
calib/gscam/: ost.txt  ost.yaml
launch/: apriltagn.launch  pylon_detection.launch  v4l.launch  v4l_detection.launch
src/: apriltag_detector.cpp
